--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 17px;
+    font-family: "poppins", sans-serif;
 }
+img{
+    width: 100%;
+}
+
 /* ====Header Start===== */
 header{
     color: white;
     align-items: center;
     padding: 20px 50px;
     background-image: url(../images/dawn.jpg);
-    background-color:#0000008c;
+    background-color: #000000c2;
     background-blend-mode: multiply;
     background-repeat: no-repeat;
     background-size: cover;
@@ -49,11 +58,18 @@ nav li a{
 .banner h3{
     font-size: 30px;
     font-style: italic;
+    margin-bottom: 10px;
 }
-.banner h3 span{}
+.banner span{
+    display: inline-block;
+    background-color: red;
+    height: 5px;
+    width: 300px;
+    border-radius: 5px;
+    /* border-width: 50px; */
+}
 .banner h1{
     font-size: 70px;
-
 }
 .banner button{
     padding: 15px 30px;
@@ -63,6 +79,119 @@ nav li a{
     color: white;
     border-radius: 50px;
 }
-
-
-
+/* for Event section */
+.upcoming-event{
+    text-align: center;
+    margin: 50px 150px;
+}
+.upcoming-event h2{
+    font-size: 40px;
+    margin-bottom: 0px;
+    text-transform: capitalize;
+}
+.upcoming-event span{
+    display: inline-block;
+    background-color: red;
+    height: 5px;
+    width: 300px;
+    border-radius: 5px;
+} 
+.event{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+    justify-content: space-between;
+    margin: 30px 0 0 0;
+}
+.event-item{}
+.event-item img{
+    height: 350px;
+    border-radius: 10px;
+}
+.event-item h4{
+    font-size: 22px;
+    margin: 10px 0 0 0;
+}
+.event-item p{}
+.event-item a{
+    font-size: 20px;
+    color: red;
+    text-decoration: none;
+    letter-spacing: 2px;
+}
+/* =======For Explore======== */
+.explore-main{
+    background-image: url(../images/father.jpg);
+    background-position: center;
+    background-color: rgba(0, 0, 255, 0.403);
+    background-blend-mode: multiply;
+    color: white;
+    background-attachment: fixed;
+}
+.Explore{
+    padding: 100px;
+    display: flex;
+}
+.explore-item{
+    width: 50%;
+}
+.explore-item h1{
+    font-size: 70px;
+    margin: 0 0 10px 0;
+}
+.explore-item span{
+    display: inline-block;
+    background-color: red;
+    height: 5px;
+    width: 200px;
+    border-radius: 5px;
+}
+.explore-item p{
+    margin: 30px 0;
+}
+.explore-item a{
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+}
+/* =====For Tour====== */
+.tour{
+    padding: 60px;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    display: grid;
+    grid-template-columns: 450px repeat(2, 1fr);
+    grid-gap: 30px;
+}
+.tour-item{
+    /* width: 30%; */
+}
+.tour-item h5{
+    /* font-size: 30px; */
+    /* margin: 0 0 10px 0; */
+    font-size: 25px;
+    margin: 0 0 0 0;
+}
+.tour-item span{
+    /* display: inline-block; */
+    /* background-color: red; */
+    /* height: 5px; */
+    /* width: 200px; */
+    /* border-radius: 5px; */
+}
+.tour-item p{}
+.img-one{
+    height: 250px;
+    margin: 0 0 20px;
+}
+.img-two{
+    height: 350px;
+    margin: 0 0 20px;
+}
+footer{
+    padding: 100px;
+    text-align: center;
+    color: white;
+    background-color: black;
+}
