--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ img{
 header{
     color: white;
     align-items: center;
-    padding: 20px 50px;
+    padding: 10px 50px;
     background-image: url(../images/dawn.jpg);
     background-color: #000000c2;
     background-blend-mode: multiply;
@@ -29,20 +29,23 @@ header{
     justify-content: space-between;
     overflow: hidden;
     position: fixed;
+    background-color: rgba(0, 0, 0, 0.177);
     top: 0;
-    width: 90%;
+    width: 95%;
 }
-.logo{}
+.logo{
+}
 .logo h3{
     font-size: 25px;
-    margin: 0px;
+    margin: 0px 50px;
     text-transform: capitalize;
 }
 .logo h3 span{
     font-weight: 150;
 }
 
-nav{}
+nav{
+}
 nav li{
     display: inline;
     
@@ -199,3 +202,108 @@ footer{
     color: white;
     background-color: black;
 }
+
+
+
+
+/* FOR Media Query */
+/* Extra small devices (phones,0=> 600px and down) */
+@media only screen and (max-width: 600px) {
+    header{
+        width: 100%;
+        background-color: red;
+    }
+    .event{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 40px;
+        justify-content: space-between;
+        margin: 30px 0 0 0;	
+    }
+    .explore-main{
+        background-image: url(../images/father.jpg);
+        background-position: center;
+        background-color: rgba(0, 0, 255, 0.403);
+        background-blend-mode: multiply;
+        color: white;
+        background-attachment: fixed;
+    }
+    .Explore{
+        padding: 100px;
+        display: flex;
+    }
+    .explore-item{
+        width: 50%;
+    }
+    .explore-item h1{
+        font-size: 50px;
+        margin: 0 0 10px 0;
+    }
+    .explore-item span{
+        display: inline-block;
+        background-color: red;
+        height: 5px;
+        width: 200px;
+        border-radius: 5px;
+    }
+    .explore-item p{
+        margin: 30px 0;
+    }
+    .explore-item a{
+        font-size: 20px;
+        color: white;    
+        text-decoration: none;
+        font-weight: 600;
+    }    
+    .tour{
+        padding: 60px;
+        /* display: flex; */
+        /* justify-content: space-between; */
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 30px;
+    }
+    .tour-item{
+        /* width: 30%; */
+    }
+    .tour-item h5{
+        /* font-size: 30px; */
+        /* margin: 0 0 10px 0; */
+        font-size: 25px;
+        margin: 0 0 0 0;
+    }
+    .tour-item span{
+        /* display: inline-block; */    
+        /* background-color: red; */    
+        /* height: 5px; */    
+        /* width: 200px; */    
+        /* border-radius: 5px; */
+    }
+    .tour-item p{}    
+    .img-one{
+        height: 250px;
+        margin: 0 0 20px;
+    }
+    .img-two{
+        height: 350px;
+        margin: 0 0 20px;
+    }
+    footer{
+        padding: 100px;
+        text-align: center;
+        color: white;
+        background-color: black;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
