--- a/css/style.css
+++ b/css/style.css
@@ -27,35 +27,33 @@ header{
 .navbar{
     display: flex;
     justify-content: space-between;
-    overflow: hidden;
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.177);
-    top: 0;
-    width: 95%;
 }
 .logo{
 }
+.logo a{
+    text-decoration: none;
+    color: white;
+}
 .logo h3{
     font-size: 25px;
-    margin: 0px 50px;
+    margin: 0;
     text-transform: capitalize;
 }
 .logo h3 span{
-    font-weight: 150;
+    font-weight: 500;
 }
-
-nav{
-}
-nav li{
+nav{}
+nav ul{}
+nav ul li{
     display: inline;
-    
-}
-nav li a{
-    color: white;
-    text-decoration: none;
-    font-weight: 600;
     margin: 24px;
 }
+nav ul li a{
+    text-decoration: none;
+    font-weight: 600;
+    color: white;
+}
+
 /* =========Header End ======= */
 
 .banner{
@@ -70,17 +68,16 @@ nav li a{
 .banner span{
     display: inline-block;
     background-color: red;
-    height: 5px;
-    width: 300px;
+    height: 6px;
+    width: 190px;
     border-radius: 5px;
-    /* border-width: 50px; */
 }
 .banner h1{
     font-size: 70px;
 }
 .banner button{
     padding: 15px 30px;
-    font-size: 20px;
+    font-size: 18px;
     background-color: red;
     border: 2px solid red;
     color: white;
@@ -206,98 +203,73 @@ footer{
     margin: 0 10px;
     font-size: 20px;
     background-color: rgb(67, 16, 195);
-    padding: 10px;
+    padding: 20px;
 }
 /* pa */
 /* FOR Media Query */
-/* Extra small devices (phones,0=> 600px and down) */
+/* Extra small devices (phones,0=> 667px and down) */
 @media only screen and (max-width: 667px) {
-    header{
-        width: 100%;
-        background-color: red;
-    }
-
-    .event{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 40px;
-        justify-content: space-between;
-        margin: 30px 0 0 0;	
-    }
-    .explore-main{
-        background-image: url(../images/father.jpg);
-        background-position: center;
-        background-color: rgba(0, 0, 255, 0.403);
-        background-blend-mode: multiply;
-        color: white;
-        background-attachment: fixed;
-    }
-    .Explore{
-        padding: 100px;
-        display: flex;
-    }
-    .explore-item{
-        width: 50%;
-    }
-    .explore-item h1{
-        font-size: 50px;
-        margin: 0 0 10px 0;
-    }
-    .explore-item span{
-        display: inline-block;
-        background-color: red;
-        height: 5px;
-        width: 200px;
-        border-radius: 5px;
-    }
-    .explore-item p{
-        margin: 30px 0;
-    }
-    .explore-item a{
-        font-size: 20px;
-        color: white;    
-        text-decoration: none;
-        font-weight: 600;
-    }    
-    .tour{
-        padding: 60px;
-        /* display: flex; */
-        /* justify-content: space-between; */
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 30px;
-    }
-    .tour-item{
-        /* width: 30%; */
-    }
-    .tour-item h5{
-        /* font-size: 30px; */
-        /* margin: 0 0 10px 0; */
-        font-size: 25px;
-        margin: 0 0 0 0;
-    }
-    .tour-item span{
-        /* display: inline-block; */    
-        /* background-color: red; */    
-        /* height: 5px; */    
-        /* width: 200px; */    
-        /* border-radius: 5px; */
-    }
-    .tour-item p{}    
-    .img-one{
-        height: 250px;
-        margin: 0 0 20px;
-    }
-    .img-two{
-        height: 350px;
-        margin: 0 0 20px;
-    }
-    footer{
-        padding: 100px;
-        text-align: center;
-        color: white;
-        background-color: black;
-    }
+/* ====Header Start===== */
+header{
+    padding: 10px 15px;
+    background-image: url(../images/dawn.jpg);
+    background-blend-mode: multiply;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.navbar{
+    display: block;
+}
+.logo{
+}
+.logo h3{
+    font-size: 20px;
+    text-align: center;
+}
+nav{}
+nav ul{
+    padding: 0;
+    text-align: center;
+}
+nav ul li{
+    display: inline;
+    margin: 5px;
+}
+nav ul li a{
+    text-decoration: none;
+    font-weight: 600;
+    color: white;
+}
+/* =========Header End ======= */
+/* =====Banner Start========= */
+.banner{
+    text-align: center;
+    padding: 100px 0px;
+}
+.banner h3{
+    font-size: 30px;
+    font-style: italic;
+    margin-bottom: 10px;
+}
+.banner span{
+    display: inline-block;
+    background-color: red;
+    height: 6px;
+    width: 190px;
+    border-radius: 5px;
+}
+.banner h1{
+    font-size: 30px;
+}
+.banner button{
+    padding: 15px 30px;
+    font-size: 18px;
+    background-color: red;
+    border: 2px solid red;
+    color: white;
+    border-radius: 50px;
+}
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
