Media query done

--- a/css/style.css
+++ b/css/style.css
@@ -160,32 +160,23 @@ nav ul li a{
     text-decoration: none;
     font-weight: 600;
 }
-/* =====For Tour====== */
+/* =====For Tour start====== */
 .tour{
     padding: 60px;
-    /* display: flex; */
-    /* justify-content: space-between; */
     display: grid;
     grid-template-columns: 450px repeat(2, 1fr);
     grid-gap: 30px;
 }
 .tour-item{
-    /* width: 30%; */
 }
 .tour-item h5{
-    /* font-size: 30px; */
-    /* margin: 0 0 10px 0; */
     font-size: 25px;
     margin: 0 0 0 0;
 }
-.tour-item span{
-    /* display: inline-block; */
-    /* background-color: red; */
-    /* height: 5px; */
-    /* width: 200px; */
-    /* border-radius: 5px; */
-}
+.tour-item span{}
 .tour-item p{}
+.tour-item a{}
+.tour-item img{}
 .img-one{
     height: 250px;
     margin: 0 0 20px;
@@ -194,6 +185,8 @@ nav ul li a{
     height: 350px;
     margin: 0 0 20px;
 }
+/* =======For Tour End====== */
+/* ======For Footer start====== */
 footer{
     padding: 100px;
     text-align: center;
@@ -206,195 +199,4 @@ footer{
     background-color: rgb(67, 16, 195);
     padding: 20px;
 }
-/* FOR Media Query */
-/* Extra small devices (phones,0=> 667px and down) */
-@media only screen and (max-width: 667px) {
-/* ====Header Start===== */
-header{
-    padding: 10px 15px;
-    background-image: url(../images/dawn.jpg);
-    background-blend-mode: multiply;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.navbar{
-    display: block;
-}
-.logo{
-}
-.logo h3{
-    font-size: 20px;
-    text-align: center;
-}
-nav{}
-nav ul{
-    padding: 0;
-    text-align: center;
-}
-nav ul li{
-    margin: 5px;
-}
-/* =========Header End ======= */
-/* =====Banner Start========= */
-.banner{
-    padding: 40px 0px;
-}
-.banner h3{
-    font-size: 25px;
-}
-.banner span{
-    height: 4px;
-    width: 150px;
-}
-.banner h1{
-    font-size: 40px;
-}
-.banner button{
-    padding: 10px 20px;
-}
-/* =====Banner End========= */
-/* for upcoming Event section */
-.upcoming-event{
-    text-align: center;
-    margin: 50px 10px;
-}
-.upcoming-event h2{
-    font-size: 30px;
-    margin-bottom: 0px;
-    text-transform: capitalize;
-}
-.upcoming-event span{
-    height: 4px;
-    width: 150px;
-} 
-.event{
-    grid-template-columns: repeat(1, 1fr);
-    gap: 20px;
-    justify-content: space-between;
-    margin: 30px 0 0 0;
-}
-.event-item{}
-.event-item img{
-    height: 250px;
-    border-radius: 10px;
-}
-.event-item h4{
-    font-size: 22px;
-    margin: 10px 0 0 0;
-}
-.event-item p{}
-.event-item a{
-    font-size: 20px;
-    color: red;
-    text-decoration: none;
-    letter-spacing: 2px;
-}
-
-/* =======for Upcoming Event End====== */
-}
-
-
-/* Medium devices (landscape tablets, 668px and up to 767px) */
-@media only screen and (min-width: 668px) and (max-width: 768px) {
-    	/* ====Header Start===== */
-header{
-    padding: 12px 15px;
-    background-image: url(../images/dawn.jpg);
-    background-blend-mode: multiply;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.navbar{
-    display: block;
-}
-.logo{
-}
-.logo h3{
-    font-size: 18px;
-    text-align: center;
-}
-nav{}
-nav ul{
-    padding: 0;
-    text-align: center;
-}
-nav ul li{
-    margin: 5px;
-}
-/* =========Header End ======= */
-/* =====Banner Start========= */
-.banner{
-    padding: 40px 0px;
-}
-.banner h3{
-    font-size: 27px;
-}
-.banner span{
-    height: 4px;
-    width: 150px;
-}
-.banner h1{
-    font-size: 45px;
-}
-.banner button{
-    padding: 12px 45px;
-}
-}
-
-/* Large tablet devices/notebooks/small laptops (769px and up to 99px) */
-@media only screen and (min-width: 769px) and (max-width: 992px) {
-    
-/* ====Header Start===== */
-header{
-    padding: 15px 40px;
-}
-.logo h3{
-    font-size: 22px;
-}
-nav ul li{
-    margin: 0 0 0 30px;
-}
-
-/* =========Header End ======= */
-
-.banner{
-    padding: 80px 0px;
-}
-.banner h3{
-    font-size: 25px;
-}
-.banner h1{
-    font-size: 60px;
-}
-.banner button{
-    padding: 12px 25px;
-}
-}
-
-/* Small laptops and 17" devices (993px and up to 1024px) */
-@media only screen and (min-width: 993px) and (max-width: 1024px) {
-
-/* ====Header Start===== */
-
-nav ul li{
-    display: inline;
-    margin: 0 0 0 24px;
-}
-
-/* =========Header End ======= */
-.banner h1{
-    font-size: 65px;
-}
-}
-
-/* Large laptops and desktops (1025px and up to 1400px) */
-@media only screen and (min-width: 1025px) and (max-width: 1400px) {
-    
-}
-
-/* Large laptops and desktops (1025px and up to 1400px) */
-@media only screen and (min-width: 1441px) and (max-width: 1600px) {
-    
-}
+/* =======For Footer End====== */
