--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,28 @@ body{
 img{
     width: 100%;
 }
-
+ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+ul li{
+    margin: 10px 20px 0 0;
+    padding: 0 0 0 0;
+}   
+ul li a{
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
+}
+ul li a:hover{
+    color: rgb(247, 10, 10);
+}
 /* ====Header Start===== */
 header{
-    color: white;
     align-items: center;
-    padding: 10px 50px;
     background-image: url(../images/dawn.jpg);
     background-color: #000000c2;
     background-blend-mode: multiply;
@@ -28,18 +44,18 @@ header{
     display: flex;
     justify-content: space-between;
     overflow: hidden;
-    background-color: #15151688;
+    background-color: #15151655;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     left: 0;
-    padding-left: 20px;
     width: 100%; /* Full width */
 }
-.logo{
-}
-.logo a{
-    text-decoration: none;
+.navbar a{
     color: white;
+}
+.logo{
+    max-width: 100%;
+    margin: 0 0 0 20px;
 }
 .logo h3{
     font-size: 25px;
@@ -49,27 +65,16 @@ header{
 .logo h3 span{
     font-weight: 500;
 }
-nav{}
-nav ul{
-    margin: 0 50px 0 0;
-    padding-top: 15px;
-    
+.nav{
+    margin: 0 0 0 0;
+    padding: 15px 0 0 0;
 }
-nav ul li{
-    display: inline;
-    margin: 24px;
-}
-nav ul li a{
-    text-decoration: none;
-    font-weight: 600;
-    color: white;
-}
-
 /* =========Header End ======= */
-
+/* =====Banner Start========= */
 .banner{
     text-align: center;
     padding: 100px 0px;
+    color: white;
 }
 .banner h3{
     font-size: 30px;
@@ -94,6 +99,7 @@ nav ul li a{
     color: white;
     border-radius: 50px;
 }
+/* =====Banner End========= */
 /* for upcoming Event section */
 .upcoming-event{
     text-align: center;
@@ -173,13 +179,12 @@ nav ul li a{
 }
 /* =====For Tour start====== */
 .tour{
-    padding: 60px;
+    padding: 60px 0 20px 50px;
     display: grid;
     grid-template-columns: 450px repeat(2, 1fr);
     grid-gap: 30px;
 }
-.tour-item{
-}
+.tour-item{}
 .tour-item h5{
     font-size: 25px;
     margin: 0 0 0 0;
@@ -199,15 +204,8 @@ nav ul li a{
 /* =======For Tour End====== */
 /* ======For Footer start====== */
 footer{
-    padding: 100px;
-    text-align: center;
-    color: white;
-    background-color: black;
-}
-.fab{
-    margin: 0 10px;
-    font-size: 20px;
-    background-color: rgb(67, 16, 195);
     padding: 20px;
+    text-align: center;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 /* =======For Footer End====== */
